Fix overflow.

--- a/css/hyryx.css
+++ b/css/hyryx.css
@@ -247,6 +247,7 @@ a:hover {
   box-shadow: 0px 1px 1px #888;
   padding: 8px;
   margin-bottom: 15px;
+  overflow: hidden;
 }
 
 #visualizer > .container div[class^="col-"] .area_frame h3 {
